--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">An AI-based Tool for Brainwave Classifier</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">We made an AI Project for human movement classifier based on brainwaves </h2>
+          <h1 data-aos="fade-up">A Machine-Learning-based Tool for Brainwave Classifier</h1>
+          <h2 data-aos="fade-up" data-aos-delay="400">We made an Machine Learning Project for human movement classifier based on brainwaves </h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
               <a href="tools.html" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
@@ -186,39 +186,39 @@
               <div class="row align-self-center gy-4">
                 <div class="col-md-6 icon-box" data-aos="fade-up">
                     <h4>1. Siapkan File EDF</h4>
-                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                    <p>Ini adalah persyaratan jenis file yang dapat diklasifikasi oleh model AI kami</p>
                 </div>
 
                 <div class="col-md-6 icon-box" data-aos="fade-up">
-                  <h4>2. Corporis voluptates sit</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                  <h4>2. Unggah File EDF</h4>
+                  <p>Unggah sebuah file EDF yang ingin diklasifikasikan</p>
               </div>
 
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <div>
-                    <h4>3. Labore consequatur</h4>
-                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                    <h4>3. Klik Tombol "Start"</h4>
+                    <p>Setelah File berhasil diunggah, klik "Start" untuk mulai klasifikasi</p>
                   </div>
                 </div>
 
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <div>
-                    <h4>4. Beatae veritatis</h4>
-                    <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                    <h4>4. Tunggu Hasilnya</h4>
+                    <p>Proses ini mungkin akan memakan waktu...</p>
                   </div>
                 </div>
 
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <div>
-                    <h4>5. Molestiae dolor</h4>
-                    <p>Et fuga et deserunt et enim. Dolorem architecto ratione tensa raptor marte</p>
+                    <h4>5. Hasil ditampilkan</h4>
+                    <p>Hasil Klasifikasi dari file EDF akan disajikan berdasarkan pelatihan yang telah dilakukan model kami</p>
                   </div>
                 </div>
 
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
                   <div>
-                    <h4>6. Explicabo consectetur</h4>
-                    <p>Est autem dicta beatae suscipit. Sint veritatis et sit quasi ab aut inventore</p>
+                    <h4>6. Ulangi atau Selesai</h4>
+                    <p>Anda bisa mengulangi lagi dengan menggunakan file baru dengan tombol "Try Again" ataupun selesai.</p>
                   </div>
                 </div>
 
@@ -255,7 +255,7 @@
               <div class="member-info">
                 <h4>Jeremi Herodian Abednigo</h4>
                 <span>2008561042</span>
-                <p>Velit aut quia fugit et et. Dolorum ea voluptate vel tempore tenetur ipsa quae aut. Ipsum exercitationem iure minima enim corporis et voluptate.</p>
+                <p>Back-end Developer; connects the ML model with the Front-end using Django Framework</p>
               </div>
             </div>
           </div>
@@ -272,7 +272,7 @@
               <div class="member-info">
                 <h4>Maharani Putri Suari</h4>
                 <span>2008561058</span>
-                <p>Quo esse repellendus quia id. Est eum et accusantium pariatur fugit nihil minima suscipit corporis. Voluptate sed quas reiciendis animi neque sapiente.</p>
+                <p>Front-end Developer; Create the Front-end Using Bootstrap 5 Framework and Javascript</p>
               </div>
             </div>
           </div>
@@ -289,7 +289,7 @@
               <div class="member-info">
                 <h4>Anak Agung Ngurah Andhika S N</h4>
                 <span>2008561077</span>
-                <p>Vero omnis enim consequatur. Voluptas consectetur unde qui molestiae deserunt. Voluptates enim aut architecto porro aspernatur molestiae modi.</p>
+                <p>Machine Learning Engineer; makes the model for brainwave classifier using Python</p>
               </div>
             </div>
           </div>
