--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <h2>Klasifikasi Gerakan Manusia dari Gelombang Sinyal Otak</h2>
               <p>
                 Dengan menggunakan teknologi Convolutional Neural Network (CNN) dan bahasa pemrograman Python, kami menciptakan 
-                Web-app untuk memahami berbagai gerakan manusia, mulai dari posisi diam hingga gerakan membuka dan menutup satu atau dua tangan. Teknologi CNN memungkinkan kami untuk melatih model yang cerdas dan responsif, 
+                Web-app untuk memahami berbagai gerakan manusia, yaitu posisi rest dan keinginan menggerakkan tangan. Teknologi CNN memungkinkan kami untuk melatih model yang cerdas dan responsif, 
                 memberikan pengalaman yang lebih baik dalam mendeteksi dan merespons gerakan manusia secara real-time.Dengan antarmuka yang intuitif, Anda dapat dengan mudah berinteraksi dengan web-app kami dan mengalami kecanggihan teknologi klasifikasi gelombang otak. 
               </p>
             </div>
@@ -185,13 +185,13 @@
             <div class="col-xl-7 d-flex content">
               <div class="row align-self-center gy-4">
                 <div class="col-md-6 icon-box" data-aos="fade-up">
-                    <h4>1. Siapkan File EDF</h4>
-                    <p>Ini adalah persyaratan jenis file yang dapat diklasifikasi oleh model AI kami</p>
+                    <h4>1. Siapkan File Brainwave Image</h4>
+                    <p>Ini adalah persyaratan file yang dapat diklasifikasi oleh model kami</p>
                 </div>
 
                 <div class="col-md-6 icon-box" data-aos="fade-up">
-                  <h4>2. Unggah File EDF</h4>
-                  <p>Unggah sebuah file EDF yang ingin diklasifikasikan</p>
+                  <h4>2. Unggah File Brainwave Image</h4>
+                  <p>Unggah sebuah file Brainwave Image yang ingin diklasifikasikan</p>
               </div>
 
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
@@ -211,7 +211,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <div>
                     <h4>5. Hasil ditampilkan</h4>
-                    <p>Hasil Klasifikasi dari file EDF akan disajikan berdasarkan pelatihan yang telah dilakukan model kami</p>
+                    <p>Hasil Klasifikasi dari file Brainwave Image akan disajikan berdasarkan pelatihan yang telah dilakukan model kami</p>
                   </div>
                 </div>
 
