--- a/tools.html
+++ b/tools.html
@@ -75,7 +75,7 @@
     <section class="inner-page">
       <div class="justify-content-center container lg-3 py-3 px-3 mt-5 ">
         <h2 class="text-center"data-aos="fade-down" data-aos-delay="100" >
-          Upload an EDF File Below
+          Upload a Brainwave Image File (PNG or JPEG)
         </h2>    
 
         <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
