--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="col-xl-7 d-flex content">
               <div class="row align-self-center gy-4">
                 <div class="col-md-6 icon-box" data-aos="fade-up">
-                    <h4>1. Siapkan File Brainwave Image</h4>
+                    <h4>1. Siapkan File Brainwave Image atau EDF</h4>
                     <p>Ini adalah persyaratan file yang dapat diklasifikasi oleh model kami</p>
                 </div>
 
