--- a/result.html
+++ b/result.html
@@ -73,86 +73,89 @@
 
 
     <section class="inner-page">
-      <div class="justify-content-center container lg-3 py-3 px-3 mt-5 ">
-        <h2 class="text-center"data-aos="fade-down" data-aos-delay="100" >
-          The Results is: 
-        </h2>    
-          <div class="col-lg-3 text-center" data-aos ="fade-left" data-aos-delay="400">
-            <button type="button" href="#tools.html" class="btn btn-primary btn-lg"><i class="bi bi-arrow-left"></i> Try Again</i></button>
-          </div>
-        </div>
+      <div class="container py-3 px-3 mt-5 text-center">
+        <h2 data-aos="fade-down" data-aos-delay="100">
+          The Results is:
+        </h2>
+        <img src="./assets/img/thinking.png" alt="thinking of moving hand" data-aos="fade-up" data-aos-delay="200">
+        <h3>Thinking of Moving Hand</h3>
+      </div>
+      <div class="container py-3 px-3 mt-3 text-start" data-aos="fade-left" data-aos-delay="300">
+        <button type="button" onclick="window.location.href='#tools.html'" class="btn btn-primary btn-lg"><i
+            class="bi bi-arrow-left"></i> Try Again</button>
       </div>
     </section>
 
-  </main>
-  <!-- End -->
+    <!-- End -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
-    <div class="footer-top">
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-lg-5 col-md-12 footer-info">
-            <a href="index.html" class="logo d-flex align-items-center">
-              <img src="assets/img/brain.png" alt="">
-              <span>Brainwave Classifier</span>
-            </a>
-            <p>A Web-app that classify human's motion using human brainwave, made with Python Programming Language </p>
-          </div>
+    <!-- ======= Footer ======= -->
+    <footer id="footer" class="footer">
+      <div class="footer-top">
+        <div class="container">
+          <div class="row gy-4">
+            <div class="col-lg-5 col-md-12 footer-info">
+              <a href="index.html" class="logo d-flex align-items-center">
+                <img src="assets/img/brain.png" alt="">
+                <span>Brainwave Classifier</span>
+              </a>
+              <p>A Web-app that classify human's motion using human brainwave, made with Python Programming Language
+              </p>
+            </div>
 
-          <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-            <h4>Contact Us</h4>
-            <p>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i> Jeremi Herodian Abednigo </a>
-              <br>
-            </p>
+            <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
+              <h4>Contact Us</h4>
+              <p>
+                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i> Jeremi Herodian Abednigo </a>
+                <br>
+              </p>
 
-            <p>
-              <a href="https://www.linkedin.com/in/putrisuari/" class="linkedin"><i class="bi bi-linkedin"></i> Maharani
-                Putri Suari</a>
-            </p>
-            <p>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i> Anak Agung Ngurah Andhika S N</a>
-            </p>
-            <p>
-              <a href="#" class="linkedin"><i class="bi bi-github"></i></a>
-              <strong>Github Repo</strong><br>
-            </p>
-          </div>
+              <p>
+                <a href="https://www.linkedin.com/in/putrisuari/" class="linkedin"><i class="bi bi-linkedin"></i>
+                  Maharani
+                  Putri Suari</a>
+              </p>
+              <p>
+                <a href="#" class="linkedin"><i class="bi bi-linkedin"></i> Anak Agung Ngurah Andhika S N</a>
+              </p>
+              <p>
+                <a href="#" class="linkedin"><i class="bi bi-github"></i></a>
+                <strong>Github Repo</strong><br>
+              </p>
+            </div>
 
-          <!-- Google Map -->
-          <div class="map-responsive col-lg-3 col-md-12 footer-contact text-center text-md-start">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1979.8272329359844!2d115.1706926!3d-8.7993579!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd244bc3acab8d9%3A0x7fba454d24527b74!2sFakultas%20Matematika%20dan%20Ilmu%20Pengetahuan%20Alam!5e0!3m2!1sen!2sid!4v1631794771207!5m2!1sen!2sid"
-              width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <!-- Google Map -->
+            <div class="map-responsive col-lg-3 col-md-12 footer-contact text-center text-md-start">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1979.8272329359844!2d115.1706926!3d-8.7993579!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd244bc3acab8d9%3A0x7fba454d24527b74!2sFakultas%20Matematika%20dan%20Ilmu%20Pengetahuan%20Alam!5e0!3m2!1sen!2sid!4v1631794771207!5m2!1sen!2sid"
+                width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    </div>
-    </div>
-    <div class="container">
-      <div class="copyright">
-        &copy; <strong><span>2023</span></strong> All Rights Reserved
       </div>
-    </div>
-  </footer>
-  <!-- End Footer -->
+      </div>
+      <div class="container">
+        <div class="copyright">
+          &copy; <strong><span>2023</span></strong> All Rights Reserved
+        </div>
+      </div>
+    </footer>
+    <!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+        class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
 
 </body>
 
