--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               <div class="row align-self-center gy-4">
                 <div class="col-md-6 icon-box" data-aos="fade-up">
                     <h4>1. Siapkan File Brainwave Image atau EDF</h4>
-                    <p>Ini adalah persyaratan file yang dapat diklasifikasi oleh model kami</p>
+                    <p>Ini adalah persyaratan file yang dapat diklasifikasi oleh model kami, untuk image berupa PNG</p>
                 </div>
 
                 <div class="col-md-6 icon-box" data-aos="fade-up">
