--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
               <div class="member-info">
                 <h4>Maharani Putri Suari</h4>
                 <span>2008561058</span>
-                <p>Front-end Developer; Create the Front-end Using Bootstrap 5 Framework and Javascript</p>
+                <p>Front-end Developer; Creates the Front-end Using Bootstrap 5 Framework and Javascript</p>
               </div>
             </div>
           </div>
