--- a/footer.html
+++ b/footer.html
@@ -59,7 +59,7 @@
                 Putri Suari</a>
             </p>
             <p>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i> Anak Agung Ngurah Andhika S N</a>
+              <a href="https://www.linkedin.com/in/andhikasatrya/" class="linkedin"><i class="bi bi-linkedin"></i> Anak Agung Ngurah Andhika S N</a>
             </p>
             <p>
               <a href="#" class="linkedin"><i class="bi bi-github"></i></a>
