--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
               <div class="member-img">
                 <img src="assets/img/team/gungendik.png" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-github"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://github.com/DimensionalDragon"><i class="bi bi-github"></i></a>
+                  <a href="https://www.linkedin.com/in/andhikasatrya/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
