--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@
               <a href="https://www.linkedin.com/in/putrisuari/" class="linkedin"><i class="bi bi-linkedin"></i> Maharani Putri Suari</a>
             </p>
             <p>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i> Anak Agung Ngurah Andhika S N</a>
+              <a href="https://www.linkedin.com/in/andhikasatrya/" class="linkedin"><i class="bi bi-linkedin"></i> Anak Agung Ngurah Andhika S N</a>
             </p>
             <p>
-              <a href="#" class="linkedin"><i class="bi bi-github"></i></a>
+              <a href="https://github.com/UAS-PPM-EEG-Classification-CNN" class="linkedin"><i class="bi bi-github"></i></a>
               <strong>Github Repo</strong><br>
             </p>
           </div>
